--- a/ILSpy/Properties/Resources.zh-Hans.resx
+++ b/ILSpy/Properties/Resources.zh-Hans.resx
@@ -613,6 +613,9 @@
   <data name="GeneratedPDBFile" xml:space="preserve">
     <value>生成的 PDB: {0}</value>
   </data>
+  <data name="GeneratingPortablePDB" xml:space="preserve">
+    <value>正在生成 Portable PDB...</value>
+  </data>
   <data name="GenerationCompleteInSeconds" xml:space="preserve">
     <value>生成完成，耗时 {0} 秒。</value>
   </data>
