--- a/ILSpy/Properties/Resources.zh-Hans.resx
+++ b/ILSpy/Properties/Resources.zh-Hans.resx
@@ -176,7 +176,7 @@
     <value>无法解析实体。可能是由于缺少程序集引用。请添加缺少的程序集并重试。</value>
   </data>
   <data name="CannotCreatePDBFile" xml:space="preserve">
-    <value>无法创建为{0}创建PDB文件,因为它不包含PE调试目录类型 'CodeView'.</value>
+    <value>不能为 {0} 创建PDB文件，因为缺少PE调试目录类型 'CodeView'。</value>
   </data>
   <data name="CheckAgain" xml:space="preserve">
     <value>再次检查</value>
@@ -610,8 +610,17 @@
   <data name="GeneratePortable" xml:space="preserve">
     <value>生成 Portable PDB</value>
   </data>
+  <data name="GeneratedPDBFile" xml:space="preserve">
+    <value>生成的 PDB: {0}</value>
+  </data>
+  <data name="GeneratingPortablePDB" xml:space="preserve">
+    <value>正在为 {0} 生成 Portable PDB...</value>
+  </data>
   <data name="GenerationCompleteInSeconds" xml:space="preserve">
     <value>生成完成，耗时 {0} 秒。</value>
+  </data>
+  <data name="GenerationFailedForAssembly" xml:space="preserve">
+    <value>为 {0} 生成 PDB 失败: {1}</value>
   </data>
   <data name="GenerationWasCancelled" xml:space="preserve">
     <value>已取消生成。</value>
@@ -842,6 +851,9 @@
   </data>
   <data name="SelectPDB" xml:space="preserve">
     <value>选择 PDB...</value>
+  </data>
+  <data name="SelectPDBOutputFolder" xml:space="preserve">
+    <value>选择目标文件夹</value>
   </data>
   <data name="SelectVersionDropdownTooltip" xml:space="preserve">
     <value>选择输出语言的版本</value>
